#Minor Fix 1)Fixed a bug where if the appointment was for today and time was after now, didnt respond or inform of the error 2)Added service cost in appointment information 3) visual updates to forms, ribbons and pathing for ribbons

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -116,9 +116,9 @@
                     <div class="ribbon"><span id="boxSpan1">DEAL</span></div>
                     <div class="banner-hdr">Online Reservation discount</div>
                     <hr>
-                    <div class="banner-bdy">By making an online reservation you get a <b>10% discount</b> on your next visit!!</div>
+                    <div class="banner-bdy">By scheduling online your appointment you get a <b>10% discount</b>!!</div>
                     <div style="position: absolute; bottom: 1%; left: 0; right: 0; margin-left: auto; margin-right: auto;">
-                        <button type="button" class="btn btn-danger center-block"><a href="ReservationsTab.php" style="text-decoration: none; color:inherit;">Make an Appointment !!</a></button>
+                        <button type="button" class="btn btn-danger center-block"><a href="{{ url_for('home.appointments') }}" style="text-decoration: none; color:inherit;">Schedule Now !!</a></button>
                     </div>
                 </div> 
             </div>
@@ -129,11 +129,11 @@
             <div class="col-md-1">
                 <div class="box">
                     <div class="ribbon"><span id="boxSpan2">DEAL</span></div>
-                    <div class="banner-hdr">Family<br> reunion</div>
+                    <div class="banner-hdr">Father<br>& son(s)</div>
                     <hr>
-                    <div class="banner-bdy">For families<br> of four (or more!) you get the kid's pizza menu<br> <b>for free</b>!!</div>
+                    <div class="banner-bdy">Get your<br> soon to be little men for a haircut<br> and get 20% on the total cost!!</div>
                     <div style="position: absolute; bottom: 1%; left: 0; right: 0; margin-left: auto; margin-right: auto;">
-                        <button type="button" class="btn btn-danger center-block"><a href="ReservationsTab.php" style="text-decoration: none; color:inherit;">Make an Appointment !!</a></button>
+                        <button type="button" class="btn btn-danger center-block"><a href="{{ url_for('home.appointments') }}" style="text-decoration: none; color:inherit;">Schedule Now !!</a></button>
                     </div>
                 </div> 
             </div>
@@ -144,11 +144,11 @@
             <div class="col-md-1">
                 <div class="box">
                     <div class="ribbon"><span id="boxSpan3">DEAL</span></div>
-                    <div class="banner-hdr">Coffee<br> Treat</div>
+                    <div class="banner-hdr">Get<br> Trimmed</div>
                     <hr>
                     <div class="banner-bdy">Make a full face repair appointment and <i><b>Trimming</b></i> is on the house!!</div>
                     <div style="position: absolute; bottom: 1%; left: 0; right: 0; margin-left: auto; margin-right: auto;">
-                        <button type="button" class="btn btn-danger center-block"><a href="ReservationsTab.php" style="text-decoration: none; color:inherit;">Make an Appointment !!</a></button>
+                        <button type="button" class="btn btn-danger center-block"><a href="{{ url_for('home.appointments') }}" style="text-decoration: none; color:inherit;">Schedule Now !!</a></button>
                     </div>
                 </div> 
             </div>
