--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -211,11 +211,11 @@
         .wrapper2{
             width: 100%;
             height: 100%;
-            background-color: rgba(197, 227, 191,0.4);
+            background-color: rgba(218, 194, 146, 0.4);
             border-radius: 15px;
             border-width: 3px;
             border-style: solid;
-            border-color: #006400;
+            border-color: #4f351c;
             margin: auto;
             padding: 10px;
         }
@@ -374,11 +374,11 @@
         .wrapper2{
             width: 100%;
             height: 100%;
-            background-color: rgba(197, 227, 191,0.4);
+            background-color: rgba(218, 194, 146, 0.4);
             border-radius: 15px;
             border-width: 3px;
             border-style: solid;
-            border-color: #006400;
+            border-color: #4f351c;
             margin: auto;
             padding: 10px;
         }
@@ -595,11 +595,11 @@
         .wrapper2{
             width: 100%;
             height: 100%;
-            background-color: rgba(197, 227, 191,0.4);
+            background-color: rgba(218, 194, 146, 0.4);
             border-radius: 15px;
             border-width: 3px;
             border-style: solid;
-            border-color: #006400;
+            border-color: #4f351c;
             margin: auto;
             padding: 10px;
         }
@@ -720,11 +720,11 @@
         .wrapper2{
             width: 100%;
             height: 100%;
-            background-color: rgba(197, 227, 191,0.4);
+            background-color: rgba(218, 194, 146, 0.4);
             border-radius: 15px;
             border-width: 3px;
             border-style: solid;
-            border-color: #006400;
+            border-color: #4f351c;
             margin: auto;
             padding: 10px;
         }
