--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <!-- cdn link for the datatables bootstrap css and js-->
+        <link rel="stylesheet" href="http://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css"></style>
+        <script type="text/javascript" src="http://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
         <!-- Custom CSS & JavaScript -->
         <link rel="stylesheet" href="/static/css/custom.css" type="text/css">
         <script src="/static/js & jquery/myScripts.js"></script>
@@ -14,28 +17,74 @@
         <!--JQuery UI Datepicker/Timepicker Reference:https://jqueryui.com/datepicker/ -->
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="//code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
         <script>
             $( function() {
                 $( '#datepicker' ).datepicker();
+                $( '#datepicker2' ).datepicker();
                 $( '[id*=timepicker]' ).timepicker({
-                    timeFormat: 'H:mm',
-                    interval: 30,
-                    minTime: '08',
-                    startTime: '08:00',
-                    maxTime: '19:30',
-                    dropdown: true,
-                    scrollbar: true,
+                timeFormat: 'H:mm',
+                interval: 30,
+                minTime: '08',
+                startTime: '08:00',
+                maxTime: '19:30',
+                dropdown: true,
+                scrollbar: true,
+                });
+                $( '[id*=timepicker2]' ).timepicker({
+                timeFormat: 'H:mm',
+                interval: 30,
+                minTime: '08',
+                startTime: '08:00',
+                maxTime: '19:30',
+                dropdown: true,
+                scrollbar: true,
                 });
             });
         </script>       
         <!-- Background styling-->
-        <style>
-            .error {color: #FF0000;}
-            
+        <style>           
             body {
             background-image:    url(/static/images_n_fonts/bg4.jpg);
             background-attachment: fixed;
+            }
+            /* Styling for the attendance block - Reference:https://www.w3schools.com/howto/howto_css_modals.asp */
+            /* The Modal (background) */
+            .modal {
+                display: none; /* Hidden by default */
+                position: fixed; /* Stay in place */
+                z-index: 1; /* Sit on top */
+                left: 0;
+                top: 0;
+                width: 100%; /* Full width */
+                height: 100%; /* Full height */
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            }
+
+            /* Modal Content/Box */
+            .modal-content {
+                background-color: #fefefe;
+                margin: 15% auto; /* 15% from the top and centered */
+                padding: 20px;
+                border: 1px solid #888;
+                width: 80%; /* Could be more or less, depending on screen size */
+            }
+
+            /* The Close Button */
+            .close {
+                color: #aaa;
+                float: right;
+                font-size: 28px;
+                font-weight: bold;
+            }
+
+            .close:hover,
+            .close:focus {
+                color: black;
+                text-decoration: none;
+                cursor: pointer;
             }
         </style>
